css/screen.css
* {
  box-sizing: border-box;
}

body {
  background-color: #EEE;
  color: #222;
  font-family: Arial;
  font-size: 14px;
  padding: 0;
  margin: 0;
  background-color: #eeeeee;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23cccccc' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
}

.wrapper {
  width: 1024px;
  padding: 0;
  background-color: #FFF;
  margin: 20px auto;
}

.header {
  background-image: url('../img/header.jpg');
  background-size: cover;
  width: 100%;
  height: 382px;
  padding: 35px;
  position: relative;
}

.header__title-wrapper {
  position: absolute;
  bottom: 0
}

.header__title, .header__subtitle {
  color: #FFF;
  background-color: #82A449;
  padding: 6px 8px;
  display: inline-block;
  font-weight: 400;
  clear: left;
  float: left;
}

.header__title {
  font-size: 40px;
  margin: 0 0 15px 0;
}

.header__subtitle {
  font-size: 22px;
  margin: 0 0 35px 0;
}

.content {
  width: 100%;
  padding: 0 35px 35px 35px;
}

.content__title {
  color: #82A449;
  margin-top: 40px;
  font-size: 19px;
  font-weight: 400;
  margin: 35px 0 15px 0;
}

.content__subtitle {
  color: #666;
  font-size: 17px;
  font-weight: 400;
  margin: 20px 0;
  line-height: 160%;
}

.content__paragraph, .content__list {
  line-height: 160%;
  margin: 15px 0;
}

.content__list {
  padding-left: 30px;
}

.content__list-item {
  line-height: 180%;
}

.content__link {
  color: #000;
}

@media only screen and ( max-width: 1064px ) {
  .wrapper {
    margin: 0;
    width: 100%;
  }
}

@media only screen and ( max-device-width: 640px ) and ( orientation: portrait ),
            screen and ( max-width: 640px ) {
  .header {
    height: 200px;
  }

  .content {
    padding: 0 15px 15px 15px;
  }
}

